2005-02-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_set_linux_task_priority): Limit
	high priority value.

2005-01-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield): Add
	back hw masking when operating the shield. This prevents a race
	with the callback request code which may occur under high
	mode migration rate. Oops.

	* nucleus/fusion.c: Add pthread_exit_rt() to unmap a shadow thread
	from a regular Linux task without destroying the latter.

	* nucleus/shadow.c (xnshadow_unmap): Handle differently unmapping
	calls from either primary or secondary modes.

	* nucleus/shadow.c (rtai_sysentry): Return -EPERM upon attempt to
	migrate a non-fusion thread.

	* configure.in: Use -fno-strict-aliasing when compiling user-space
	stuff since 2.6.10 enforces it to silence its own warnings, and we
	need to recycle a few of its offending headers. When have been
	pretty careful up to now not to break the type aliasing rules, so
	it should be ok, but we definitely need to keep going on this
	way... This hack should be removed asap when the kernel side is
	fixed.

	* nucleus/shadow.c: Handle the XNSHIELD bit on a per-shadow basis,
	dynamically controlling whether the interrupt shield needs to be
	enforced at context switch time or not.

	* nucleus/pod.c (xnpod_set_thread_mode): Do not attempt to
	lock/unlock the scheduler if the target thread is not current. Add
	proper handling of the XNSHIELD bit.

	* skins/rtai/task.c (rt_task_create, rt_task_set_mode): Handle the
	XNSHIELD mode bit.

	* skins/rtai/syscalls.c (__rt_task_create): Set the XNSHIELD mode
	bit by default for newly created shadows.

2005-01-25  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/i386/hal: Add workaround for SMI.

2005-01-22  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/fpu.S (rthal_restore_fpu): Fix code re-enabling the
	FPU.

	* arch/ppc/hal/fpu.S (rthal_save_fpu): Re-enable FPU before saving